ConjuntosParser.py
# Generated from Conjuntos.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys


class ConjuntosParser ( Parser ):

    grammarFileName = "Conjuntos.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'set['", "']'", "'.belongs('", "')'", 
                     "'.sum'", "'.prom'", "'.comp'", "'.long'", "'union'", 
                     "'inter'", "'diff'", "'='", "'if'", "'then '", "'else '", 
                     "'fi'", "'while'", "'do'", "'done'", "'+'", "'-'", 
                     "'*'", "'/'", "'('", "'and'", "'or'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "AND_OPERATOR", "OR_OPERATOR", "COMPARATION_OPERATOR", 
                      "VARNAME", "NUMBER", "DIGIT", "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_setElement = 2
    RULE_setFunction = 3
    RULE_setBelongs = 4
    RULE_setElementSum = 5
    RULE_setElementProm = 6
    RULE_setElementComp = 7
    RULE_setElementLong = 8
    RULE_setElementUnion = 9
    RULE_setElementInter = 10
    RULE_setElementDiff = 11
    RULE_assignStatement = 12
    RULE_ifStatement = 13
    RULE_whileStatement = 14
    RULE_booleanExpression = 15
    RULE_operand = 16
    RULE_expression = 17
    RULE_term = 18
    RULE_factor = 19

    ruleNames =  [ "program", "statement", "setElement", "setFunction", 
                   "setBelongs", "setElementSum", "setElementProm", "setElementComp", 
                   "setElementLong", "setElementUnion", "setElementInter", 
                   "setElementDiff", "assignStatement", "ifStatement", "whileStatement", 
                   "booleanExpression", "operand", "expression", "term", 
                   "factor" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    AND_OPERATOR=25
    OR_OPERATOR=26
    COMPARATION_OPERATOR=27
    VARNAME=28
    NUMBER=29
    DIGIT=30
    WS=31

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ConjuntosParser.StatementContext)
            else:
                return self.getTypedRuleContext(ConjuntosParser.StatementContext,i)


        def getRuleIndex(self):
            return ConjuntosParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = ConjuntosParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 40
                self.statement()
                self.state = 43 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ConjuntosParser.T__0) | (1 << ConjuntosParser.T__12) | (1 << ConjuntosParser.T__23) | (1 << ConjuntosParser.VARNAME) | (1 << ConjuntosParser.NUMBER))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(ConjuntosParser.ExpressionContext,0)


        def assignStatement(self):
            return self.getTypedRuleContext(ConjuntosParser.AssignStatementContext,0)


        def VARNAME(self):
            return self.getToken(ConjuntosParser.VARNAME, 0)

        def booleanExpression(self):
            return self.getTypedRuleContext(ConjuntosParser.BooleanExpressionContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(ConjuntosParser.IfStatementContext,0)


        def setElement(self):
            return self.getTypedRuleContext(ConjuntosParser.SetElementContext,0)


        def setFunction(self):
            return self.getTypedRuleContext(ConjuntosParser.SetFunctionContext,0)


        def getRuleIndex(self):
            return ConjuntosParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = ConjuntosParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 52
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 45
                self.expression(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 46
                self.assignStatement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 47
                self.match(ConjuntosParser.VARNAME)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 48
                self.booleanExpression(0)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 49
                self.ifStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 50
                self.setElement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 51
                self.setFunction()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SetElementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.a_start = None # Token
            self.a_end = None # Token
            self.a_step = None # Token

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(ConjuntosParser.NUMBER)
            else:
                return self.getToken(ConjuntosParser.NUMBER, i)

        def getRuleIndex(self):
            return ConjuntosParser.RULE_setElement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSetElement" ):
                listener.enterSetElement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSetElement" ):
                listener.exitSetElement(self)




    def setElement(self):

        localctx = ConjuntosParser.SetElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_setElement)
        try:
            self.state = 63
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 54
                self.match(ConjuntosParser.T__0)
                self.state = 55
                localctx.a_start = self.match(ConjuntosParser.NUMBER)
                self.state = 56
                localctx.a_end = self.match(ConjuntosParser.NUMBER)
                self.state = 57
                localctx.a_step = self.match(ConjuntosParser.NUMBER)
                self.state = 58
                self.match(ConjuntosParser.T__1)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 59
                self.match(ConjuntosParser.T__0)
                self.state = 60
                localctx.a_start = self.match(ConjuntosParser.NUMBER)
                self.state = 61
                localctx.a_end = self.match(ConjuntosParser.NUMBER)
                self.state = 62
                self.match(ConjuntosParser.T__1)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SetFunctionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def setBelongs(self):
            return self.getTypedRuleContext(ConjuntosParser.SetBelongsContext,0)


        def setElementSum(self):
            return self.getTypedRuleContext(ConjuntosParser.SetElementSumContext,0)


        def setElementProm(self):
            return self.getTypedRuleContext(ConjuntosParser.SetElementPromContext,0)


        def setElementLong(self):
            return self.getTypedRuleContext(ConjuntosParser.SetElementLongContext,0)


        def setElementComp(self):
            return self.getTypedRuleContext(ConjuntosParser.SetElementCompContext,0)


        def setElementUnion(self):
            return self.getTypedRuleContext(ConjuntosParser.SetElementUnionContext,0)


        def setElementInter(self):
            return self.getTypedRuleContext(ConjuntosParser.SetElementInterContext,0)


        def setElementDiff(self):
            return self.getTypedRuleContext(ConjuntosParser.SetElementDiffContext,0)


        def getRuleIndex(self):
            return ConjuntosParser.RULE_setFunction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSetFunction" ):
                listener.enterSetFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSetFunction" ):
                listener.exitSetFunction(self)




    def setFunction(self):

        localctx = ConjuntosParser.SetFunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_setFunction)
        try:
            self.state = 73
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 65
                self.setBelongs()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 66
                self.setElementSum()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 67
                self.setElementProm()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 68
                self.setElementLong()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 69
                self.setElementComp()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 70
                self.setElementUnion()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 71
                self.setElementInter()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 72
                self.setElementDiff()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SetBelongsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.a_name = None # Token
            self.a_numero = None # Token

        def VARNAME(self):
            return self.getToken(ConjuntosParser.VARNAME, 0)

        def NUMBER(self):
            return self.getToken(ConjuntosParser.NUMBER, 0)

        def getRuleIndex(self):
            return ConjuntosParser.RULE_setBelongs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSetBelongs" ):
                listener.enterSetBelongs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSetBelongs" ):
                listener.exitSetBelongs(self)




    def setBelongs(self):

        localctx = ConjuntosParser.SetBelongsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_setBelongs)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            localctx.a_name = self.match(ConjuntosParser.VARNAME)
            self.state = 76
            self.match(ConjuntosParser.T__2)
            self.state = 77
            localctx.a_numero = self.match(ConjuntosParser.NUMBER)
            self.state = 78
            self.match(ConjuntosParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SetElementSumContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.a_name = None # Token

        def VARNAME(self):
            return self.getToken(ConjuntosParser.VARNAME, 0)

        def getRuleIndex(self):
            return ConjuntosParser.RULE_setElementSum

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSetElementSum" ):
                listener.enterSetElementSum(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSetElementSum" ):
                listener.exitSetElementSum(self)




    def setElementSum(self):

        localctx = ConjuntosParser.SetElementSumContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_setElementSum)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            localctx.a_name = self.match(ConjuntosParser.VARNAME)
            self.state = 81
            self.match(ConjuntosParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SetElementPromContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.a_name = None # Token

        def VARNAME(self):
            return self.getToken(ConjuntosParser.VARNAME, 0)

        def getRuleIndex(self):
            return ConjuntosParser.RULE_setElementProm

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSetElementProm" ):
                listener.enterSetElementProm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSetElementProm" ):
                listener.exitSetElementProm(self)




    def setElementProm(self):

        localctx = ConjuntosParser.SetElementPromContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_setElementProm)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            localctx.a_name = self.match(ConjuntosParser.VARNAME)
            self.state = 84
            self.match(ConjuntosParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SetElementCompContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.a_name = None # Token

        def VARNAME(self):
            return self.getToken(ConjuntosParser.VARNAME, 0)

        def getRuleIndex(self):
            return ConjuntosParser.RULE_setElementComp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSetElementComp" ):
                listener.enterSetElementComp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSetElementComp" ):
                listener.exitSetElementComp(self)




    def setElementComp(self):

        localctx = ConjuntosParser.SetElementCompContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_setElementComp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            localctx.a_name = self.match(ConjuntosParser.VARNAME)
            self.state = 87
            self.match(ConjuntosParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SetElementLongContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.a_name = None # Token

        def VARNAME(self):
            return self.getToken(ConjuntosParser.VARNAME, 0)

        def getRuleIndex(self):
            return ConjuntosParser.RULE_setElementLong

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSetElementLong" ):
                listener.enterSetElementLong(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSetElementLong" ):
                listener.exitSetElementLong(self)




    def setElementLong(self):

        localctx = ConjuntosParser.SetElementLongContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_setElementLong)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            localctx.a_name = self.match(ConjuntosParser.VARNAME)
            self.state = 90
            self.match(ConjuntosParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SetElementUnionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.a_name1 = None # Token
            self.a_name2 = None # Token

        def VARNAME(self, i:int=None):
            if i is None:
                return self.getTokens(ConjuntosParser.VARNAME)
            else:
                return self.getToken(ConjuntosParser.VARNAME, i)

        def getRuleIndex(self):
            return ConjuntosParser.RULE_setElementUnion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSetElementUnion" ):
                listener.enterSetElementUnion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSetElementUnion" ):
                listener.exitSetElementUnion(self)




    def setElementUnion(self):

        localctx = ConjuntosParser.SetElementUnionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_setElementUnion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            localctx.a_name1 = self.match(ConjuntosParser.VARNAME)
            self.state = 93
            self.match(ConjuntosParser.T__8)
            self.state = 94
            localctx.a_name2 = self.match(ConjuntosParser.VARNAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SetElementInterContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.a_name1 = None # Token
            self.a_name2 = None # Token

        def VARNAME(self, i:int=None):
            if i is None:
                return self.getTokens(ConjuntosParser.VARNAME)
            else:
                return self.getToken(ConjuntosParser.VARNAME, i)

        def getRuleIndex(self):
            return ConjuntosParser.RULE_setElementInter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSetElementInter" ):
                listener.enterSetElementInter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSetElementInter" ):
                listener.exitSetElementInter(self)




    def setElementInter(self):

        localctx = ConjuntosParser.SetElementInterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_setElementInter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            localctx.a_name1 = self.match(ConjuntosParser.VARNAME)
            self.state = 97
            self.match(ConjuntosParser.T__9)
            self.state = 98
            localctx.a_name2 = self.match(ConjuntosParser.VARNAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SetElementDiffContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.a_name1 = None # Token
            self.a_name2 = None # Token

        def VARNAME(self, i:int=None):
            if i is None:
                return self.getTokens(ConjuntosParser.VARNAME)
            else:
                return self.getToken(ConjuntosParser.VARNAME, i)

        def getRuleIndex(self):
            return ConjuntosParser.RULE_setElementDiff

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSetElementDiff" ):
                listener.enterSetElementDiff(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSetElementDiff" ):
                listener.exitSetElementDiff(self)




    def setElementDiff(self):

        localctx = ConjuntosParser.SetElementDiffContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_setElementDiff)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            localctx.a_name1 = self.match(ConjuntosParser.VARNAME)
            self.state = 101
            self.match(ConjuntosParser.T__10)
            self.state = 102
            localctx.a_name2 = self.match(ConjuntosParser.VARNAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARNAME(self):
            return self.getToken(ConjuntosParser.VARNAME, 0)

        def expression(self):
            return self.getTypedRuleContext(ConjuntosParser.ExpressionContext,0)


        def setElement(self):
            return self.getTypedRuleContext(ConjuntosParser.SetElementContext,0)


        def setFunction(self):
            return self.getTypedRuleContext(ConjuntosParser.SetFunctionContext,0)


        def getRuleIndex(self):
            return ConjuntosParser.RULE_assignStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignStatement" ):
                listener.enterAssignStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignStatement" ):
                listener.exitAssignStatement(self)




    def assignStatement(self):

        localctx = ConjuntosParser.AssignStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_assignStatement)
        try:
            self.state = 113
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.match(ConjuntosParser.VARNAME)
                self.state = 105
                self.match(ConjuntosParser.T__11)
                self.state = 106
                self.expression(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 107
                self.match(ConjuntosParser.VARNAME)
                self.state = 108
                self.match(ConjuntosParser.T__11)
                self.state = 109
                self.setElement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 110
                self.match(ConjuntosParser.VARNAME)
                self.state = 111
                self.match(ConjuntosParser.T__11)
                self.state = 112
                self.setFunction()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IfStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def booleanExpression(self):
            return self.getTypedRuleContext(ConjuntosParser.BooleanExpressionContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ConjuntosParser.StatementContext)
            else:
                return self.getTypedRuleContext(ConjuntosParser.StatementContext,i)


        def getRuleIndex(self):
            return ConjuntosParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)




    def ifStatement(self):

        localctx = ConjuntosParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_ifStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(ConjuntosParser.T__12)
            self.state = 116
            self.booleanExpression(0)
            self.state = 117
            self.match(ConjuntosParser.T__13)
            self.state = 119 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 118
                self.statement()
                self.state = 121 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ConjuntosParser.T__0) | (1 << ConjuntosParser.T__12) | (1 << ConjuntosParser.T__23) | (1 << ConjuntosParser.VARNAME) | (1 << ConjuntosParser.NUMBER))) != 0)):
                    break

            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ConjuntosParser.T__14:
                self.state = 123
                self.match(ConjuntosParser.T__14)
                self.state = 125 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 124
                    self.statement()
                    self.state = 127 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ConjuntosParser.T__0) | (1 << ConjuntosParser.T__12) | (1 << ConjuntosParser.T__23) | (1 << ConjuntosParser.VARNAME) | (1 << ConjuntosParser.NUMBER))) != 0)):
                        break



            self.state = 131
            self.match(ConjuntosParser.T__15)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class WhileStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def booleanExpression(self):
            return self.getTypedRuleContext(ConjuntosParser.BooleanExpressionContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ConjuntosParser.StatementContext)
            else:
                return self.getTypedRuleContext(ConjuntosParser.StatementContext,i)


        def getRuleIndex(self):
            return ConjuntosParser.RULE_whileStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStatement" ):
                listener.enterWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStatement" ):
                listener.exitWhileStatement(self)




    def whileStatement(self):

        localctx = ConjuntosParser.WhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_whileStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(ConjuntosParser.T__16)
            self.state = 134
            self.booleanExpression(0)
            self.state = 135
            self.match(ConjuntosParser.T__17)
            self.state = 137 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 136
                self.statement()
                self.state = 139 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ConjuntosParser.T__0) | (1 << ConjuntosParser.T__12) | (1 << ConjuntosParser.T__23) | (1 << ConjuntosParser.VARNAME) | (1 << ConjuntosParser.NUMBER))) != 0)):
                    break

            self.state = 141
            self.match(ConjuntosParser.T__18)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BooleanExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.op = None # Token

        def operand(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ConjuntosParser.OperandContext)
            else:
                return self.getTypedRuleContext(ConjuntosParser.OperandContext,i)


        def COMPARATION_OPERATOR(self):
            return self.getToken(ConjuntosParser.COMPARATION_OPERATOR, 0)

        def booleanExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ConjuntosParser.BooleanExpressionContext)
            else:
                return self.getTypedRuleContext(ConjuntosParser.BooleanExpressionContext,i)


        def AND_OPERATOR(self):
            return self.getToken(ConjuntosParser.AND_OPERATOR, 0)

        def OR_OPERATOR(self):
            return self.getToken(ConjuntosParser.OR_OPERATOR, 0)

        def getRuleIndex(self):
            return ConjuntosParser.RULE_booleanExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBooleanExpression" ):
                listener.enterBooleanExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBooleanExpression" ):
